force-app/main/default/objects/Warewash_Service__c/Warewash_Service__c.object-meta.xml
<CustomObject>
    <label>Warewash Service</label>
    <nameField>
        <displayFormat>WS-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warewash Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>