force-app/main/default/objects/Warewash_Service__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Warewash Services</relationshipLabel>
    <relationshipName>Warewash_Services</relationshipName>
    <type>Lookup</type>
</CustomField>