force-app/main/default/objects/Warewash_Service__c/fields/Detergent_Drops__c.field-meta.xml
<CustomField>
    <fullName>Detergent_Drops__c</fullName>
    <label>Detergent (Drops)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>