force-app/main/default/objects/Warewash_Service__c/fields/Final_Rinse_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Final_Rinse_Temperature__c</fullName>
    <label>Final Rinse Temperature</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>