force-app/main/default/objects/Warewash_Service__c/fields/Rinse_Tank_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Rinse_Tank_Temperature__c</fullName>
    <label>Rinse Tank Temperature</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>