force-app/main/default/objects/Warewash_Service__c/fields/Sanitizer_PPM__c.field-meta.xml
<CustomField>
    <fullName>Sanitizer_PPM__c</fullName>
    <label>Sanitizer (PPM)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>