force-app/main/default/objects/Warewash_Service__c/fields/Survey_Location__c.field-meta.xml
<CustomField>
    <fullName>Survey_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Location</label>
    <referenceTo>Survey_Location__c</referenceTo>
    <relationshipLabel>Warewash Services</relationshipLabel>
    <relationshipName>Warewash_Services</relationshipName>
    <type>Lookup</type>
</CustomField>