force-app/main/default/objects/Warewash_Service__c/fields/Warewash_Comment__c.field-meta.xml
<CustomField>
    <fullName>Warewash_Comment__c</fullName>
    <label>Warewash Comment</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>