force-app/main/default/objects/Warewash_Service__c/fields/Water_Grain__c.field-meta.xml
<CustomField>
    <fullName>Water_Grain__c</fullName>
    <label>Water Grain</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>