force-app/main/default/objects/Warewash_Service__c/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Warewash Services</relationshipLabel>
    <relationshipName>Warewash_Services</relationshipName>
    <type>Lookup</type>
</CustomField>